--- a/client/src/app/movie-card/movie-card.component.css
+++ b/client/src/app/movie-card/movie-card.component.css
@@ -1,14 +1,23 @@
 .card.movie .poster {
-    /* 780 : 1170 = 133 : 200 */
-    width: 133px;
+    /* 780 : 1170 = 133 : 156 */
+    width: 104px;
+}
+
+.info {
+    height: 20px;
+}
+
+.info .text {
+    opacity: 0.6;
+    font-weight: bold;
 }
 
 .cast {
-    max-height: 52px;
+    height: 68px;
 }
 
 .plot {
-    height: 100px;
+    height: 68px;
 }
 
 .subs {
