--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -1,18 +1,20 @@
 <div class="card series">
+
     <div class="poster">
         <img src="{{series.poster}}" width="100%"/>
     </div>
+
     <div class="details">
 
         <div class="section title">
             <div class="icon"><i class="fa fa-television"></i></div>
-            <div class="text">{{series.name}}</div>
+            <div class="text">{{series.title}}</div>
         </div>
 
         <ng-container *ngIf="preview == EpisodePreview.aired">
             <div class="section info">
                 <div class="icon"><i class="fa fa-rss" ></i></div>
-                <div class="text">{{series.year + ' - ' + series.data.genres}}</div>
+                <div class="text">{{series.aired.eid + ': ' + series.aired.title}}</div>
             </div>
             <div class="section plot">
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
@@ -23,7 +25,9 @@
         <ng-container *ngIf="preview == EpisodePreview.missing">
             <div class="section info">
                 <div class="icon"><i class="fa fa-eye-slash"></i></div>
-                <div class="text">{{series.year + ' - ' + series.data.genres}}</div>
+                <div class="text">{{series.missing.eid +
+                        (series.summary.missing > 1 ? ' (+' + (series.summary.missing-1) + ')' : '') +
+                        ': ' + series.missing.title}}</div>
             </div>
             <div class="section plot">
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
@@ -35,20 +39,66 @@
             <div class="section info">
                 <div class="icon"><i class="fa fa-hdd-o"></i></div>
                 <div class="text">{{series.available.eid +
-                    (series.summary.available > 1 ? ' (+' + (series.summary.available-1) + ')' : '') +
+                    (series.summary.available > 1 ? '(+' + (series.summary.available-1) + ')' : '') +
                     ': ' + series.available.title}}</div>
             </div>
             <div class="section plot">
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
                 <div class="text">{{series.available.plot}}</div>
             </div>
-            <div class="section subs" *ngIf="series.available.subs">
+            <div class="section subs" *ngIf="series.available.subtitles">
                 <div class="icon"><i class="fa fa-cc"></i></div>
-                <div class="text">{{series.available.subs}}</div>
+                <div class="text">{{series.available.subtitles}}</div>
             </div>
         </ng-container>
 
-        <!---->
-    </div>
-</div>
+        <div class="tools">
+            <div class="btn-group" role="group">
+                <div class="btn-group" *ngIf="!series.watchlist">
+                    <button type="button" class="btn btn-sm btn-danger" (click)="openIni()">
+                        <i class="fa fa-lg fa-ban"></i>
+                    </button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                        <i class="fa fa-lg fa-heart" [ngClass]="{'false': !series.watchlist}"></i>
+                    </button>
+                </div>
+                <div class="btn-group" *ngIf="series.imdb">
+                    <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
+                        <i class="fa fa-lg fa-imdb"></i>
+                    </button>
+                </div>
+                <div class="btn-group" title="Series">
+                    <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
+                        <i class="fa fa-lg fa-info-circle"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="btn-group" role="group">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                        <i class="fa fa-lg fa-eye" [ngClass]="{'false': !series.preview(preview).watched}"></i>
+                    </button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                        <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !series.preview(preview).collected}"></i>
+                    </button>
+                </div>
+                <div class="btn-group" *ngIf="series.preview(preview).imdb">
+                    <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
+                        <i class="fa fa-lg fa-imdb"></i>
+                    </button>
+                </div>
+                <div class="btn-group" title="Episode">
+                    <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
+                        <i class="fa fa-lg fa-info-circle"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
 
+    </div>
+
+</div>
