--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,7 +4,7 @@
     flex-shrink: 0;
     flex-direction: row;
     background-color: white;
-    box-shadow: 5px 5px 5px darkgray;
+    box-shadow: 2px 2px 10px darkgray;
     border: 1px solid darkgrey;
     border-radius: 3px;
     margin: 15px;
@@ -17,6 +17,7 @@
 .card .details {
     display: flex;
     flex-grow: 0;
+    position: relative;
 }
 
 .card .poster {
@@ -74,4 +75,46 @@
 
 .card .section.title div.text {
     font-weight: bold;
+}
+
+.card .section.info {
+    height: 20px;
+}
+
+.card .section.plot {
+    height: 68px;
+}
+
+.card .section.plot .text {
+    opacity: 0.65;
+}
+
+.card .tools {
+    display: none;
+    position: absolute;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-direction: column;
+    align-items: flex-end;
+    bottom: 5px;
+    right: 5px;
+}
+
+.card:hover .tools {
+    display: flex;
+}
+
+.card .tools > div {
+    flex-shrink: 1;
+    margin: 5px;
+    box-shadow: 1px 1px 15px 0 darkgray;
+}
+
+.card .tools .fa.false {
+    opacity: 0.3;
+}
+
+.btn-sm, .btn-group-sm > .btn {
+    line-height: 22px;
+    padding: 5px 9px;
 }
