--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,12 @@
-<div class="title-grid">
-    <div *ngFor="let title of titles">
-        <app-movie-card *ngIf="title.type == TitleType.movie"
-            [movie]="title">
-        </app-movie-card>
-        <app-series-card *ngIf="title.type == TitleType.series"
-            [series]="title" [preview]="EpisodePreview.available">
-        </app-series-card>
+<div id="MainBox">
+    <div class="title-grid">
+        <div *ngFor="let title of titles">
+            <app-movie-card *ngIf="title.type == TitleType.movie"
+                [movie]="title">
+            </app-movie-card>
+            <app-series-card *ngIf="title.type == TitleType.series"
+                [series]="title" [preview]="EpisodePreview.available">
+            </app-series-card>
+        </div>
     </div>
 </div>
