--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -55,12 +55,12 @@
         <div class="tools">
             <div class="btn-group" role="group">
                 <div class="btn-group" *ngIf="!series.watchlist">
-                    <button type="button" class="btn btn-sm btn-danger" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-danger" (click)="trashIt()">
                         <i class="fa fa-lg fa-ban"></i>
                     </button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="setWatchlist(!series.watchlist)">
                         <i class="fa fa-lg fa-heart" [ngClass]="{'false': !series.watchlist}"></i>
                     </button>
                 </div>
