--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,51 @@
+html,
+body {
+    margin: 0;
+    height: 100%;
+}
+
+/*
+vedi https://stackoverflow.com/a/34643330/28852
+ */
+app-root,
+app-dashboard {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 auto;
+    width: 100%;
+    height: 100%;
+}
+
+#MainBox {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    background-color: #eee;
+    width: 100%;
+    height: 100%;
+}
+
+code {
+    color: black;
+    background-color: white;
+}
+
+::-webkit-input-placeholder {
+    color: #bdbdbd;
+}
+
+::-ms-input-placeholder {
+    color: #bdbdbd;
+}
+
+::-moz-placeholder {
+    color: #bdbdbd;
+}
+
+/**/
+
 .card {
     display: flex;
     flex-grow: 0;
