--- a/client/src/app/series-card/series-card.component.css
+++ b/client/src/app/series-card/series-card.component.css
@@ -2,3 +2,27 @@
     /* 680 : 1000 = 136 : 156 */
     width: 106px;
 }
+
+.card.series .details {
+    width: 100%;
+}
+
+.card.series .status {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    vertical-align: middle;
+    position: absolute;
+    background-color: white;
+    font-size: 80%;
+    padding: 5px;
+    bottom: 4px;
+    right: 5px;
+    z-index: 50;
+}
+
+.card.series .status.ended {
+    color: darkred;
+    font-weight: bold;
+    opacity: 0.7;
+}
