--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
 html,
 body {
     margin: 0;
     height: 100%;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /*
@@ -25,11 +28,6 @@ app-dashboard {
     background-color: #eee;
     width: 100%;
     height: 100%;
-}
-
-code {
-    color: black;
-    background-color: white;
 }
 
 ::-webkit-input-placeholder {
@@ -79,6 +77,7 @@ code {
     flex-direction: column;
     padding: 5px 5px 5px 10px;
     color: darkslategray;
+    overflow: hidden;
 }
 
 .card .section {
@@ -101,7 +100,7 @@ code {
 .card .section div.icon {
     flex-grow: 0;
     flex-shrink: 0;
-    margin-top: 1px;
+    margin-top: 0;
     width: 20px;
 }
 
@@ -138,24 +137,26 @@ code {
 }
 
 .card .tools {
-    display: none;
+    display: flex;
     position: absolute;
     flex-grow: 0;
     flex-shrink: 1;
     flex-direction: column;
     align-items: flex-end;
-    bottom: 5px;
-    right: 5px;
+    bottom: 28px;
+    right: -200px;
+    transition: right 0.2s;
+    z-index: 100;
 }
 
-.card:hover .tools {
-    display: flex;
+.card .details:hover .tools {
+    right: -7px;
 }
 
 .card .tools > div {
     flex-shrink: 1;
     margin: 5px;
-    box-shadow: 1px 1px 15px 0 darkgray;
+    box-shadow: -1px 2px 10px 0 darkgray;
 }
 
 .card .tools .fa.false {
