--- a/client/src/app/movie-card/movie-card.component.css
+++ b/client/src/app/movie-card/movie-card.component.css
@@ -2,3 +2,28 @@
     /* 780 : 1170 = 133 : 156 */
     width: 104px;
 }
+
+.card.movie .runtime {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    vertical-align: middle;
+    position: absolute;
+    background-color: white;
+    font-size: 80%;
+    padding: 5px;
+    bottom: 4px;
+    right: 5px;
+    z-index: 50;
+}
+
+.card.movie .runtime > * {
+    display: flex;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+
+.card.movie .runtime .fa {
+    margin: auto 0 auto 5px;
+}
