--- a/client/src/app/movie-card/movie-card.component.html
+++ b/client/src/app/movie-card/movie-card.component.html
@@ -30,25 +30,29 @@
             <div class="text">{{movie.subtitles}}</div>
         </div>
 
+        <div class="runtime" *ngIf="movie.data.runtime">
+            <div>{{movie.runtime}}</div><i class="fa fa-clock-o"></i>
+        </div>
+
         <div class="tools">
             <div class="btn-group" role="group">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
                         <i class="fa fa-lg fa-eye" [ngClass]="{'false': !movie.watched}"></i>
                     </button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
                         <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !movie.collected}"></i>
                     </button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatchlist()">
                         <i class="fa fa-lg fa-heart" [ngClass]="{'false': !movie.watchlist}"></i>
                     </button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
+                    <button type="button" class="btn btn-sm btn-success" (click)="openLink(movie.imdbUrl)">
                         <i class="fa fa-lg fa-imdb"></i>
                     </button>
                 </div>
