--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -22,54 +22,49 @@
             </div>
         </ng-container>
 
-        <ng-container *ngIf="!series.error && preview == EpisodePreview.aired && series.aired">
-            <div class="section info">
-                <div class="icon"><i class="fa fa-rss" ></i></div>
-                <div class="text">
-                    <span style="font-weight: bold;">{{series.aired.eid}}</span>
-                    <span>{{': ' + series.aired.title}}</span>
-                </div>
-            </div>
+        <ng-container *ngIf="!series.error && !episode">
             <div class="section plot">
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="text">{{series.aired.plot}}</div>
+                <div class="text">{{series.plot}}</div>
             </div>
         </ng-container>
 
-        <ng-container *ngIf="!series.error && preview == EpisodePreview.missing && series.missing">
-            <div class="section info">
-                <div class="icon"><i class="fa fa-eye-slash"></i></div>
-                <div class="text">
-                    <span style="font-weight: bold;">{{series.missing.eid}}</span>
-                    <span *ngIf="series.episodes.missing > 1">{{'(+' + (series.episodes.missing-1) + ')'}}</span>
-                    <span>{{': ' + series.missing.title}}</span>
-                </div>
-            </div>
-            <div class="section plot">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="text">{{series.missing.plot}}</div>
-            </div>
-        </ng-container>
+        <ng-container *ngIf="!series.error && episode">
 
-        <ng-container *ngIf="!series.error && preview == EpisodePreview.available && series.available">
             <div class="section info">
-                <div class="icon"><i class="fa fa-hdd-o"></i></div>
+                <div class="icon">
+                    <i class="fa {{episodeIcon}}"></i>
+                </div>
                 <div class="text">
-                    <span style="font-weight: bold;">{{series.available.season}}</span>
+                    <span style="font-weight: bold;">{{episode.season}}</span>
                     <span>&#8226;</span>
-                    <span style="font-weight: bold;">{{series.available.episode}}</span>
-                    <span *ngIf="series.episodes.available > 1">{{'(+' + (series.episodes.available-1) + ')'}}</span>
-                    <span>{{': ' + series.available.title}}</span>
+                    <span style="font-weight: bold;">{{episode.episode}}</span>
+                    <span *ngIf="episode === series.available && series.episodes.available > 1">
+                        {{'(+' + (series.episodes.available-1) + ')'}}
+                    </span>
+                    <span *ngIf="episode === series.missing && series.episodes.missing > 1">
+                        {{'(+' + (series.episodes.missing-1) + ')'}}
+                    </span>
+                    <span>{{': ' + episode.title}}</span>
                 </div>
             </div>
+
             <div class="section plot">
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="text">{{series.available.plot}}</div>
+                <div class="text">{{episode.plot || 'N/A'}}</div>
             </div>
-            <div class="section subs" *ngIf="series.available.subtitles">
+
+            <div class="section subs" *ngIf="episode.subtitles">
                 <div class="icon"><i class="fa fa-cc"></i></div>
-                <div class="text">{{series.available.subtitles}}</div>
+                <div class="text">{{episode.subtitles}}</div>
             </div>
+
+            <div class="section subs" *ngIf="!episode.subtitles"
+                [style.color]="episode.airsToday ? 'darkred' : !episode.firstAired ? 'lightgray' : null">
+                <div class="icon"><i class="fa fa-clock-o"></i></div>
+                <div class="text">{{episode.airedText(true) || 'unknown'}}</div>
+            </div>
+
         </ng-container>
 
         <div class="tools">
@@ -95,20 +90,20 @@
                     </button>
                 </div>
             </div>
-            <div class="btn-group" role="group" *ngIf="series.preview(preview)">
+            <div class="btn-group" role="group" *ngIf="episode">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
-                        <i class="fa fa-lg fa-eye" [ngClass]="{'false': !series.preview(preview).watched}"></i>
+                        <i class="fa fa-lg fa-eye" [ngClass]="{'false': !episode.watched}"></i>
                     </button>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
-                        <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !series.preview(preview).collected}"></i>
+                        <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !episode.collected}"></i>
                     </button>
                 </div>
-                <div class="btn-group" *ngIf="series.preview(preview).imdbUrl">
+                <div class="btn-group" *ngIf="episode.imdbUrl">
                     <button type="button" class="btn btn-sm btn-success"
-                        (click)="openLink(series.preview(preview).imdbUrl)">
+                        (click)="openLink(episode.imdbUrl)">
                         <i class="fa fa-lg fa-imdb"></i>
                     </button>
                 </div>
