--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -11,7 +11,10 @@ body {
 vedi https://stackoverflow.com/a/34643330/28852
  */
 app-root,
-app-dashboard {
+app-watchlist,
+app-missings,
+app-dashboard,
+app-everything {
     display: flex;
     position: absolute;
     flex-direction: column;
@@ -28,6 +31,26 @@ app-dashboard {
     background-color: #eee;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
+}
+
+#MainBox .title-grid {
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-self: flex-start;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: #F2F2F2;
+    padding: 10px;
+}
+
+#MainBox .title-grid > div {
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 ::-webkit-input-placeholder {
@@ -78,6 +101,7 @@ app-dashboard {
     padding: 5px 5px 5px 10px;
     color: darkslategray;
     overflow: hidden;
+    width: 100%;
 }
 
 .card .section {
