--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,16 +1,15 @@
 <div id="LinkBar">
-    <div class="btn-group" *ngFor="let link of LINKS">
+    <div class="btn-group" *ngFor="let view of VIEWS">
         <button type="button" class="btn" [ngClass]="{
-            'btn-primary': link.url != activeUrl,
-            'btn-success': link.url === activeUrl
-        }" (click)="router.navigateByUrl(link.url);">
-            <div><i class="fa {{link.btn}}"></i></div>
-            <span>{{link.lbl}}</span>
+            'btn-primary': view.tag != activeView,
+            'btn-success': view.tag === activeView
+        }" (click)="openView(view.tag);">
+            <div><i class="fa {{view.ico}}"></i></div>
+            <span>{{view.lbl}}</span>
         </button>
     </div>
 </div>
 <div id="MsgBox">
-    <!-- quello interno serve per allineare in basso -->
     <div>
         <div class="alert alert-dismissable" *ngFor="let msg of messages.list; let i = index" [ngClass]="{
             'alert-info': msg.type === MessageType.info,
@@ -31,4 +30,8 @@
 <div class="overlay" *ngIf="config.locked">
     <i class="fa fa-spinner fa-pulse fa-3x fa-fw" *ngIf="!config.confirmPrompt"></i>
 </div>
-<router-outlet></router-outlet>
+<div id="GridBox">
+    <ag-grid-angular id="GridObj" class="ag-theme-fresh"
+        [gridOptions]="titleGrid" [rowData]="titleRows" [columnDefs]="titleCols">
+    </ag-grid-angular>
+</div>
