--- a/client/src/app/series-card/series-card.component.css
+++ b/client/src/app/series-card/series-card.component.css
@@ -7,26 +7,12 @@
     width: 100%;
 }
 
-.card.series .status {
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: row;
-    vertical-align: middle;
-    position: absolute;
-    background-color: white;
-    font-size: 80%;
-    padding: 5px;
-    bottom: 4px;
-    right: 5px;
-    z-index: 50;
-}
-
-.card.series .status.ended {
+.card.series .footr.ended {
     color: darkred;
     font-weight: bold;
     opacity: 0.7;
 }
 
-.card.series .status .fa {
+.card.series .footr .fa {
     margin: auto 0 auto 5px;
 }
