--- a/client/src/app/movie-card/movie-card.component.html
+++ b/client/src/app/movie-card/movie-card.component.html
@@ -6,7 +6,7 @@
 
     <div class="details">
 
-        <div class="section title">
+        <div class="section title" title="{{movie.title}}">
             <div class="icon"><i class="fa fa-film"></i></div>
             <div class="text">{{movie.title}}</div>
         </div>
