--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -123,7 +123,10 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    margin: 0;
-    height: 100%;
-    width: 100%;
+    /*height: 100%;
+    width: 100%;*/
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
