--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -6,7 +6,7 @@
 
     <div class="details">
 
-        <div class="section title">
+        <div class="section title" title="{{series.title}}">
             <div class="icon"><i class="fa fa-television"></i></div>
             <div class="text">{{series.title}}</div>
         </div>
