--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -27,13 +27,13 @@ app-watchlist,
 app-missings,
 app-dashboard,
 app-everything {
-    /*display: flex;
+    display: flex;
     position: absolute;
     flex-direction: column;
     align-items: center;
-    flex: 1 1 auto;*/
+    flex: 1 1 auto;
     width: 100%;
-    height: 100%;
+    height: 100%;/**/
 }
 
 /*
