--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -123,10 +123,27 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    /*height: 100%;
-    width: 100%;*/
-    top: 0;
+    top: 40px;
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+.title-filter {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    background-color: #F2F2F2;
+    box-shadow: 2px 2px 10px darkgray;
+    padding: 5px;
+    height: 40px;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.title-filter input {
+    display: flex;
+    position: relative;
+    width: 60%;
 }
