--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div id="LinkBar">
-    <div class="btn-group" *ngFor="let view of VIEWS | keys">
+    <div class="btn-group" *ngFor="let view of ViewTypes | values">
         <button type="button" class="btn" [ngClass]="{
             'btn-primary': view != activeView,
             'btn-success': view === activeView
-        }" (click)="openView(view);">
-            <div><i class="fa {{VIEWS[view].icon}}"></i></div>
-            <span>{{VIEWS[view].label}}</span>
+        }" (click)="getData(view);">
+            <div><i class="fa {{view.icon}}"></i></div>
+            <span>{{view.label}}</span>
         </button>
     </div>
 </div>
@@ -31,7 +31,11 @@
     <i class="fa fa-spinner fa-pulse fa-3x fa-fw" *ngIf="!config.confirmPrompt"></i>
 </div>
 <div id="GridBox" [style.left]="gridMargin + 'px'">
-    <ag-grid-angular id="GridObj" class="ag-theme-fresh"
-        [gridOptions]="titleGrid" [rowData]="titleRows" [columnDefs]="titleCols">
+    <ag-grid-angular id="GridObj" class="ag-theme-fresh" [gridOptions]="titleGrid"
+        [rowData]="titleRows" [columnDefs]="titleCols">
     </ag-grid-angular>
+</div>
+<div class="form-group form-group-sm title-filter">
+    <input class="form-control form-control-sm" placeholder="Search title..."
+        (input)="setRows(null, $event.target.value);" />
 </div>
