--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -45,6 +45,10 @@
     margin: auto;
 }
 
+#LinkBar .accessory {
+    margin-top: 32px;
+}
+
 #MsgBox {
     display: flex;
     flex: 2 1 auto;
@@ -97,6 +101,7 @@
 .alert strong,
 .alert span {
     margin-left: 5px;
+    margin-right: 10px;
 }
 
 .alert.fa-info-circle {
