--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,10 +2,16 @@
     <div class="btn-group" *ngFor="let view of ViewTypes | values">
         <button type="button" class="btn" [ngClass]="{
             'btn-primary': view != activeView,
-            'btn-success': view === activeView
+            'btn-danger': view === activeView
         }" (click)="getData(view);">
             <div><i class="fa {{view.icon}}"></i></div>
             <span>{{view.label}}</span>
+        </button>
+    </div>
+    <div class="btn-group accessory">
+        <button type="button" class="btn btn-success" (click)="importIMDB();"
+            *ngIf="activeView && activeView.tag === 'watchlist'">
+            <div><i class="fa fa-imdb"></i></div><span>Import</span>
         </button>
     </div>
 </div>
@@ -30,7 +36,7 @@
 <div class="overlay" *ngIf="config.locked">
     <i class="fa fa-spinner fa-pulse fa-3x fa-fw" *ngIf="!config.confirmPrompt"></i>
 </div>
-<div id="GridBox" [style.left]="gridMargin + 'px'">
+<div id="GridBox">
     <ag-grid-angular id="GridObj" class="ag-theme-fresh" [gridOptions]="titleGrid"
         [rowData]="titleRows" [columnDefs]="titleCols">
     </ag-grid-angular>
