--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -22,11 +22,7 @@ body {
 /*
 vedi https://stackoverflow.com/a/34643330/28852
  */
-app-root,
-app-watchlist,
-app-missings,
-app-dashboard,
-app-everything {
+app-root {
     display: flex;
     position: absolute;
     flex-direction: column;
@@ -182,7 +178,7 @@ ag-grid-angular {
     flex-direction: column;
     align-items: flex-end;
     bottom: 28px;
-    right: -200px;
+    right: -228px;
     transition: right 0.2s;
     z-index: 100;
 }
